--- a/public/project.JSON
+++ b/public/project.JSON
@@ -2,13 +2,35 @@
     {
       "id" : 1,
       "name" : "Comfy-share",
-      "des" :  "An used furniture buying and selling web application which is made of MERN stack using HTML & Tailwind css. This web application have different panel for users & Admin.  2 different kind of user can loged in. One is Seller and another is Buyer. Seller can add products from dashboard and Buyer able to buy the product and from order history s(he) can complete the payment. Payment method enabled using Stripe !",
+      "des" :  "An used furniture buying and selling web application which is made of MERN stack using HTML & Tailwind css. This web application have different panel for users & Admin.  2 different kind of user can loged in. One is Seller and another is Buyer. Seller can add furnitures from dashboard and Buyer able to buy the furniture and from order history s(he) can complete the payment. Payment method enabled using Stripe !",
       "tec" : "React .Firebase .nodejs .Mongodb",
       "allTech" : ["React", "express Js","stripe","tailwind Css","JSX","vercel","firebase","JWT","HTML","reacts different library & packages"],
-      "img" : "https://i.ibb.co/1f29zhs/share-comfy.png",
+      "img" : "https://i.ibb.co/0r7Tjgn/share-comfy-main.png",
+      "img1" : "https://i.ibb.co/WnRkdtW/share-comfy-img1.png",
       "moreDetails": "where u will find out 2types of login system in here which include (email & passowrd login system and Google Login system). Among with that i have utilized the private routing & admin routing too and the purpose of the private routing is to, you can't give reviews or edit review or delete review without getting signup and admin you controls the users.",
-      "KeyPoint" : ["Project done with MERN stack with Firebase Authentication", "Three types of user intregated. 1. buyer 2.seller and 3.Admin","seller can upload, delete s(he)'s product and the seller can also advertise her/his project", "Buyer can choose a product can see the product list and last s(he) can do payment through strip","Admin can control all the user and can able to see user's info", "user can login and signup (2 different types of sign/registration method added by using firebase)", "two types of option in registertration page to sign up as a buyer or seller"],
-      "images": ["https://i.ibb.co/CvKQ38D/home.png","https://i.ibb.co/zmj2h22/registration.png","https://i.ibb.co/J3Lvy3R/order-Product.png","https://i.ibb.co/Kh8LMYf/Advertise.png","https://i.ibb.co/y6L5T8Z/addproduct.png"],
+      "KeyPoint" : ["Project done with MERN stack with Firebase Authentication", "Three types of user intregated. 1. buyer 2.seller and 3.Admin","seller can upload, delete s(he)'s furniture and the seller can also advertise her/his project", "Buyer can choose a furniture can see the furniture list and last s(he) can do payment through strip","Admin can control all the user and can able to see user's info", "user can login and signup (2 different types of sign/registration method added by using firebase)", "two types of option in registertration page to sign up as a buyer or seller"],
+      "imgDes" : [
+        {
+          "featureTitle":"Share-Comfy registration process",
+          "featureImg":"https://i.ibb.co/Njb917p/share-comfy-reg.png",
+          "featureDes" : "This Picture shows the Registration process. You can complete your registration through the google login system. But for google registration, you will be buyer default. And For the manual registration system, you can choose (Seller / Buyer)"
+        },
+        {
+          "featureTitle":"Share-Comfy Order a Product",
+          "featureImg":"https://i.ibb.co/J3Lvy3R/order-Product.png",
+          "featureDes" : "This Picture shows the furniture ordering process. After Clicking on the order button you will get a form, some of the data on that form will be disabled for edit. after filling the order you can confirm the furniture for buying"
+        },
+        {
+          "featureTitle":"Share-Comfy Advertise Product",
+          "featureImg":"https://i.ibb.co/zGrSgbx/share-comfy-1.png",
+          "featureDes" : "If you are a seller and you want to advertise your furniture as it can show on the homepage then you can do this one too.. just you need to go to the dashboard. Here is an option to put the furniture advertise section"
+        },
+        {
+          "featureTitle":"Share-Comfy Add Product",
+          "featureImg":"https://i.ibb.co/y6L5T8Z/addproduct.png",
+          "featureDes" : "For sellers, this is a form, that you will get from the dashboard section where you can add your furniture to make the furniture sellable. you just need to fill out the form by giving the necessary data"
+        }
+      ],
       "liveLInk": "https://share-comfy.web.app",
       "clientRipo": "https://github.com/DiptoDey321/share-comfy-client",
       "serverRipo": "https://github.com/DiptoDey321/Codify-server"
@@ -20,9 +42,32 @@
       "des" : "An service reviewing website. Using MERN stack i have complete this site. The main feature of the website is the logged in user can give review of a particular items and also s(he) can edit the given review! Also user can able to add service from dashboard. used Firebase for user-authentication system",
       "tec" : "React .Firebase .nodejs .Mongodb",
       "img" : " https://i.ibb.co/p1zMDgs/Royal-Foodies.png",
+      "img1" : "https://i.ibb.co/FJjYmdN/img1.png",
       "allTech" : ["React", "express Js","stripe","tailwind Css","JSX","vercel","firebase","JWT","HTML","reacts different library & packages"],
       "moreDetails":"this project is on food service based (cloud kitchen). Where you can see different kind of food related service .where you can also get some post over blogs in resent. All you can see other review on that particular serivices and also you can give your review too I have utilized firebase in here, where u will find out 2types of login system in here which include (email & passowrd login system and Google Login system). Among with that i have utilized the private routing too and the purpose of the private routing is to, you can't give reviews or edit review or delete review without getting signup.",
       "KeyPoint":["user can login and signup (2 different types of sign/registration method added by using firebase)","user can give review on the services"," user can edit or delete his/her own review","user can add services","Server intregated Web application","private Routing enable( cannt give review or add service without login)"],
+      "imgDes" : [
+        {
+          "featureTitle":"Why royal Foodies ",
+          "featureImg":"https://i.ibb.co/h28ZLsc/service-why.png",
+          "featureDes" : "This portion of the website describe why you will choose royal foodies and you can see top three services in there and by clicking view more you can view more services"
+        },
+        {
+          "featureTitle":"Royal-foodies Add Service",
+          "featureImg":"https://i.ibb.co/vjD3STK/service-add.png",
+          "featureDes" : "On this picture you can see a form in where you can add services that you want to add your website"
+        },
+        {
+          "featureTitle":"Royal foodies Add A review",
+          "featureImg":"https://i.ibb.co/12CFkkb/add-review.png",
+          "featureDes" : "Here you will know about the services details. among with that you can able to know review over the services. In addition you can put your review if you are logged in"
+        },
+        {
+          "featureTitle":"Royal-foodies All Your Review",
+          "featureImg":"https://i.ibb.co/5G3CYDX/all-review.png",
+          "featureDes" : "For sellers, this is a form, that you will get from the dashboard section where you can add your furniture to make the furniture sellable. you just need to fill out the form by giving the necessary data"
+        }
+      ],
       "liveLInk": "https://royal-foodies.web.app/",
       "clientRipo": "https://github.com/DiptoDey321/royal-foodies-client",
       "serverRipo": "https://github.com/DiptoDey321/royal-foodies-server"
@@ -32,6 +77,35 @@
       "name" : "Codify",
       "des" : "Codify is a learnging web application where the user can see course depending on catagory. Also s(he) add or buy any course if s(he) is logged in. If not then it will redirected to the login page. User Also can able to download the course information in pdf file from the course-info",
       "tec" : "React .Firebase. Nodejs. Express",
-      "img" : "https://i.ibb.co/3NZqT5Q/codify.png"
+      "img" : "https://i.ibb.co/3NZqT5Q/codify.png",
+      "img1" : "https://i.ibb.co/xhrhzvp/share-comfy.png",
+      "allTech" : ["React", "express Js","stripe","tailwind Css","JSX","vercel","firebase","JWT","HTML","reacts different library & packages"],
+      "moreDetails":"this project is on food service based (cloud kitchen). Where you can see different kind of food related service .where you can also get some post over blogs in resent. All you can see other review on that particular serivices and also you can give your review too I have utilized firebase in here, where u will find out 2types of login system in here which include (email & passowrd login system and Google Login system). Among with that i have utilized the private routing too and the purpose of the private routing is to, you can't give reviews or edit review or delete review without getting signup.",
+      "KeyPoint":["user can login and signup (2 different types of sign/registration method added by using firebase)","user can give review on the services"," user can edit or delete his/her own review","user can add services","Server intregated Web application","private Routing enable( cannt give review or add service without login)"],
+      "imgDes" : [
+        {
+          "featureTitle":"Codify registration process",
+          "featureImg":" https://i.ibb.co/QFC7h7s/share-comfy-3.png",
+          "featureDes" : "This Picture shows the Registration process. You can complete your registration through the google login system. Also you can do registration through github too. Also manual regsitration available"
+        },
+        {
+          "featureTitle":"Codify View all course",
+          "featureImg":"https://i.ibb.co/nMhXXWn/share-comfy-4.png",
+          "featureDes" : "Here you can findout the avaiale course. You can view all courses at a time. Also you can see the courses category-wise"
+        },
+        {
+          "featureTitle":"Codify Course-info",
+          "featureImg":"https://i.ibb.co/GxMqLGc/share-comfy-2.png",
+          "featureDes" : "Here, You can find the course details of the particular course. You will find the outline, course totall duration and can download outline via PDF! if you are a logged in user the can get premium access"
+        },
+        {
+          "featureTitle":"Codify Add Product",
+          "featureImg":"https://i.ibb.co/wRyJbVn/share-comfy-1.png",
+          "featureDes" : "On this Section you can find the most recent blog which is written by the users of codify."
+        }
+      ],
+      "liveLInk": "https://royal-foodies.web.app/",
+      "clientRipo": "https://github.com/DiptoDey321/royal-foodies-client",
+      "serverRipo": "https://github.com/DiptoDey321/royal-foodies-server"
     }
   ]
